<resources>
    <string name="app_name">Bahnhof live CE</string>
    <string name="app_id">de.deutschebahn.bahnhoflive</string>
    <string name="home_suggestionsMessageNoResult">Bitte überprüfen Sie Ihre Eingabe</string>
    <string name="dlg_yes">Ja</string>
    <string name="dlg_no">Nein</string>
    <string name="dlg_cancel">Abbrechen</string>
    <string name="dlg_ok">OK</string>
    <string name="dep_arr_filter_Tracks">Gleis</string>
    <string name="dep_arr_filter_Type">Zugtyp</string>
    <string name="menu_feedback">Feedback</string>
    <string name="title_feedback">@string/menu_feedback</string>
    <string name="settings_tracking_not_active_msg">Adobe Analytics zur Erstellung von Fehleranalysen und Statistiken ist derzeit nicht aktiviert. Möchten Sie die anonymisierte Datenerfassung erlauben?</string>
    <string name="settings_tracking_active_msg">Adobe Analytics zur Erstellung von Fehleranalysen und Statistiken ist derzeit aktiviert. Möchten Sie die anonymisierte Datenerfassung weiterhin erlauben?</string>
    <string name="settings_tracking_dlg_title">"Datenschutz DB Bahnhof live"</string>
    <string name="venue_open">Geöffnet</string>
    <string name="venue_closed">Geschlossen</string>
    <string name="venue_notAvailable">Keine Angabe</string>
    <string name="venue_openHours">@string/openHours</string>
    <string name="venue_payment">Zahlungsmöglichkeiten</string>
    <string name="wagenstand_last_updated">Wagenreihungsplan Stand: &lt;b>%1$s&lt;/b> Uhr</string>
    <string name="wagenstand_no_result_copy">Für den ausgewählten Zug liegt derzeit noch keine aktuelle Wagenreihung vor. Bitte versuchen Sie es später erneut.</string>
    <string name="wagenstand_no_result_headline">Hinweis</string>
    <string name="facilityStatus_active">In Betrieb</string>
    <string name="facilityStatus_inactive">Außer Betrieb</string>
    <string name="facilityStatus_unknown">Keine Angabe</string>
    <string name="facilityStatus_overview_title">Übersicht</string>
    <string name="facilityStatus_saved_title">Merkliste</string>
    <string name="facility_edit">Liste leeren</string>
    <string name="facility_deleteall_alert_title">Liste leeren</string>
    <string name="facility_deleteall_alert_text">Möchten Sie alle Einträge aus der Liste entfernen?</string>
    <string name="facility_deleteall_alert_yes">Ja</string>
    <string name="facility_deleteall_alert_no">Nein</string>
    <string name="alert_notificationOkayLink">Okay</string>
    <string name="feedback_teaser">Zufrieden mit der App? Teilen Sie Ihre Erfahrungen im Play Store.</string>
    <string name="feedback_title">Kontakt</string>
    <string name="feedback_text">Schreiben Sie uns, sollten Ihnen Unstimmigkeiten in der App auffallen.</string>
    <string name="feedback_button">Kontakt aufnehmen</string>
    <string name="feedback_subject">Feedback DB Bahnhof live App</string>
    <string name="feedback_send_to">marketing-bahnhoefe@deutschebahn.com</string>
    <string name="rating_title">Zufrieden mit der App?</string>
    <string name="rating_text">Unterstützen Sie uns mit einer positiven Bewertung im Play Store.</string>
    <string name="rating_button">App bewerten</string>
    <string name="bugreport_button">Problem mit der App melden</string>
    <string name="complaint_button">Verschmutzungen und Defekte melden</string>
    <string name="feedback_whatsapp_template">Sehr geehrte Damen und Herren, mir ist eine Verschmutzung an folgendem Bahnhof aufgefallen: *%1$s* %2$s</string>
    <string name="activate_wagenstand_reminder">Erinnerung vor Einfahrt des Zuges senden.</string>
    <string name="alert_wagenstand_reminder_not_possible_msg">Die Erinnerungsfunktion steht nur bis 10 Minuten vor Einfahrt des Zuges zur Verfügung.</string>
    <string name="wagon_feature_bicycle_spaces">Stellplätze für Fahrräder</string>
    <string name="wagon_feature_wheelchair_spaces">Plätze für Menschen mit Rollstuhl</string>
    <string name="wagon_feature_disabled_toilet">Toilette für mobilitätseingeschränkte Personen</string>
    <string name="wagon_feature_airconditioning">Klimaanlage</string>
    <string name="status_defective">defekt</string>
    <string name="status_open">offen</string>
    <string name="status_closed">geschlossen</string>
    <string name="status_available">verfügbar</string>
    <string name="status_unavailable">nicht verfügbar</string>
    <string name="status_reserved">reserviert</string>
    <string name="status_noservice">nicht bedient</string>
    <string name="template_feature_with_status">%1$s %2$s</string>
    <string name="template_feature_without_anything">%1$s</string>
    <string name="template_feature_with_status_and_additional_info">%1$s %2$s %3$s</string>
    <string name="template_feature_with_additional_info">%1$s %2$s</string>
    <string name="defective_airconditioning"><b>Achtung:</b> In diesem Wagen ist die Klimaanlage nicht funktionsfähig. Bitte weichen Sie auf einen anderen Wagen aus.</string>
    <string name="list_title_local_transport_stations">Stationen &amp; Haltestellen</string>
    <string name="rich_app_title"><b>Bahnhof</b> live</string>
    <string name="legal_notice">Impressum</string>
    <string name="privacy_policy">Datenschutz</string>
    <string name="hint_search">Haltestellen finden. Bahnhöfe entdecken.</string>
    <string name="settings">Einstellungen</string>
    <string name="template_distance_in_km">%1$d km</string>
    <string name="template_distance_in_m">%1$d m</string>
    <string name="hint_find_stations">@string/hint_search</string>
    <string name="search_history">Suchverlauf</string>
    <string name="search_results">Vorschläge</string>
    <string name="home_suggestionsTitleNoResult">Leider keinen Bahnhof gefunden.</string>
    <string name="search_no_station_found">Keine Station gefunden.</string>
    <string name="template_platform">Gl. %1$s</string>
    <string name="tab_db">Bahnhof</string>
    <string name="tab_local_transport">ÖPNV</string>
    <string name="btn_wagon_order">Zur Wagenreihung</string>
    <string name="main_tabTitleDepartures">Abfahrt</string>
    <string name="main_tabTitleArrivals">Ankunft</string>
    <string name="stationinfo_infos_and_services">Info &amp; Services vor Ort</string>
    <string name="stationinfo_service_phone_numbers">Rufnummern &amp; Services</string>
    <string name="stationinfo_parkings">Parkplätze</string>
    <string name="stationinfo_lockers">Schließfächer</string>
    <string name="title_stationinfo_categories">Bahnhofsinformationen</string>
    <string name="title_shopping_categories"><![CDATA[Shoppen & Schlemmen]]></string>
    <string name="generic_empty_message">Es sind keine Daten vorhanden.</string>
    <string name="filter_allow_all">Alle anzeigen</string>
    <string name="title_filter">Filter Einstellungen</string>
    <string name="parking_occupancy_closed">Geschlossen</string>
    <string name="parking_occupancy_24_7">24 Std. 7 Tage geöffnet</string>
    <string name="parking_occupancy_very_low">0 – 10 freie Stellplätze</string>
    <string name="parking_occupancy_low">10 – 30 freie Stellplätze</string>
    <string name="parking_occupancy_medium">30 – 50 freie Stellplätze</string>
    <string name="button_news_external_link">Mehr Informationen</string>
    <string name="title_occupancy_explanation">Besuchendenaufkommen</string>
    <string name="occupancy_level_low">Weniger Besuchende als üblich</string>
    <string name="occupancy_explanation_low">Vor Ort ist aktuell mit weniger Besuchenden als gewöhnlich zu rechnen. In der Regel ist das Publikumsaufkommen zu dieser Uhrzeit an diesem Wochentag höher.</string>
    <string name="occupancy_level_average">Übliches Besuchendenaufkommen</string>
    <string name="occupancy_explanation_average">Die Anzahl der Besuchenden vor Ort entspricht dem gewöhnlichen Publikumsaufkommen zu dieser Uhrzeit an diesem Wochentag.</string>
    <string name="occupancy_level_high">Mehr Besuchende als üblich</string>
    <string name="occupancy_explanation_high">Vor Ort ist aktuell mit mehr Besuchenden als gewöhnlich zu rechnen. In der Regel ist das Publikumsaufkommen zu dieser Uhrzeit an diesem Wochentag geringer.</string>
    <string name="occupancy_advice_title">Hinweise</string>
    <string name="occupancy_advice_copy">Bitte beachten Sie: Diese Info-Grafik gibt Auskunft über das aktuelle Besuchendenaufkommen im Vergleich zum durchschnittlichen Besuchendenaufkommen der vergangenen acht Wochen. Für diese Grafik werden Näherungswerte errechnet und keine absoluten Zahlen verwendet. Folglich sind Abweichungen zum tatsächlichen Publikumsaufkommen vor Ort möglich. Diese Grafik gibt außerdem keine Auskunft hinsichtlich des Besuchendenaufkommens im Verhältnis zu den räumlichen Kapazitäten vor Ort. Alle Angaben sind ohne Gewähr.</string>
    <string name="complaint_headline">@string/feedback_complaint_title</string>
    <string name="feedback_complaint_explanation">Ihnen ist eine Verunreinigung oder eine defekte Anlage an einem Bahnhof aufgefallen? Benachrichtigen Sie uns gerne direkt über <b>WhatsApp</b>.*</string>
    <string name="feeback_whatsapp_button">WhatsApp öffnen</string>
    <string name="feedback_cost_notice">Dieser Service ist <b>kostenlos</b>. Es fällt ggf. das Datenentgelte Ihres Mobilfunkproviders an.</string>
    <string name="feedback_mail_alternative">E-Mail</string>
    <string name="feedback_phone_number">030 586020930</string>
    <string name="feeback_disclaimer"><b>* Bitte beachten Sie,</b> dass die Benachrichtigung auf diesem Weg ein bestehendes Konto beim Dienst „WhatsApp“ voraussetzt und über den Dienst „MessengerPeople“ weitergeleitet wird. Diese Dienste und deren Datenverarbeitung werden ausschließlich durch die jeweiligen Anbietenden eigenverantwortlich angeboten, betrieben und ausgestaltet. Sofern Sie diese Dienste freiwillig und eigenständig nutzen, um uns eine Verschmutzung zu melden, sind die Erklärungen zum Datenschutz von „WhatsApp“ und „MessengerPeople GmbH“ zu beachten. Hinsichtlich der Verarbeitung Ihrer Daten bei der DB Station&amp;Service AG im Zuge einer Verschmutzungsmeldung über diese Dienste lesen Sie bitte vorab auch aufmerksam unsere Datenschutzerklärung: bahnhof.de/service/db-reinigungsteam</string>
    <string name="feedback_whatsapp_unavailable">Sie benötigen ein bestehendes Konto beim Dienst „WhatsApp“. Aktuell ist dieser Dienst nicht auf ihrem Gerät installiert.</string>
    <string name="feedback_headline_alternative_contacts">Alternative Kontaktmöglichkeiten</string>
    <string name="map_consent_description">Mit Aktivierung der Karte wird von Ihnen eine Verbindung zu den Servern von Google hergestellt. Dabei übermitteln Sie personenbezogene Daten (mindestens Ihre IP-Adresse) an Google.</string>
    <string name="map_provider_privacy_policy">Datenschutzhinweise von Google</string>
    <string name="map_privacy_policy">Mehr dazu in unserem Datenschutzhinweis</string>
    <string name="map_accept">Karte anzeigen</string>
    <string name="sev_db_companion_service_time_range">täglich von 7:00 bis 19:00 Uhr</string>
    <string name="sr_sev_db_companion_service_time_range">Montag bis Freitag. Sieben bis Neunzehn Uhr</string>
    <string name="rail_replacement_db_companion_text1">Blinde und stark sehbeeinträchtigte Reisende können sich an Bahnhöfen mit Ersatzverkehr sicher und schnell durch unser geschultes Personal per Videoanruf zur Ersatzhaltestelle und zurück begleiten lassen. Dies ist ein Service der DB Regio AG.</string>
    <string name="rail_replacement_db_companion_text2">Dieser Service steht Ihnen für die Zeit der Baumaßnahmen ab dem 15. Juli bis 14. Dezember 2024, <b>täglich von 07:00 bis 19:00 Uhr</b> zur Verfügung.</string>
    <string name="rail_replacement_db_companion_service_times">Der Service ist <b>täglich von 07:00 Uhr bis 19:00 Uhr</b> erreichbar.</string>
    <string name="rail_replacement_db_companion_call_video">Video-Anruf starten</string>
</resources>