<?xml version="1.0" encoding="utf-8"?><!--
  ~ SPDX-FileCopyrightText: 2020 DB Station&Service AG <bahnhoflive-opensource@deutschebahn.com>
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d6dbdf"
        android:orientation="horizontal"
        android:padding="@dimen/default_space">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_occupancy_explanation"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_schliessen"
            android:contentDescription="@string/sr_close" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/default_space"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/occupancy_level_low"
                android:lineSpacingMultiplier="1.2"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/occupancy_explanation_low"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp" />

            <TextView
                android:text="@string/occupancy_level_average"
                android:lineSpacingMultiplier="1.2"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/occupancy_explanation_average"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp" />

            <TextView
                android:text="@string/occupancy_level_high"
                android:lineSpacingMultiplier="1.2"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/occupancy_explanation_high"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp" />

            <TextView
                android:text="@string/occupancy_advice_title"
                android:lineSpacingMultiplier="1.2"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/occupancy_advice_copy"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp" />


            <TextView
                android:visibility="gone"
                android:id="@+id/btnExternalLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_button_grey"
                android:gravity="center"
                android:minHeight="64dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/button_news_external_link" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>