<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_space"
        android:text="@string/map_consent_description" />

    <TextView
        android:id="@+id/provider_privacy_policy_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_space"
        android:text="@string/map_provider_privacy_policy" />

    <TextView
        android:id="@+id/privacy_policy_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_space"
        android:text="@string/map_privacy_policy" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_space">

        <Button
            android:id="@+id/btn_accept"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>