<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ SPDX-FileCopyrightText: 2020 DB Station&Service AG <bahnhoflive-opensource@deutschebahn.com>
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  -->
<de.deutschebahn.bahnhoflive.view.DecoratedCard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/card_background"
        android:orientation="vertical"

        >

        <include  android:id="@+id/overview" layout="@layout/common_detail_overview" />

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/default_space_double"
            android:paddingBottom="@dimen/overscroll_height">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:importantForAccessibility="yes"
                android:text="@string/rail_replacement_db_companion_text1"
                android:textSize="@dimen/textsize_28" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_triple" />

            <TextView
                android:id="@+id/service_announcement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:importantForAccessibility="yes"
                android:text="@string/rail_replacement_db_companion_text2"
                android:textSize="@dimen/textsize_28" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_triple" />

            <TextView
                android:id="@+id/text_servicetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rail_replacement_db_companion_service_times"
                android:textSize="@dimen/textsize_28"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_half" />

            <TextView
                android:id="@+id/servicetimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sev_db_companion_service_time_range"
                android:contentDescription="@string/sr_sev_db_companion_service_time_range"
                android:textSize="@dimen/textsize_28" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_quadruple" />

            <TextView
                android:id="@+id/linkVideoCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_button_grey"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:minHeight="64dp"
                android:text="@string/rail_replacement_db_companion_call_video"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_quadruple" />

            <include
                android:id="@+id/layout_hint" layout="@layout/link_with_text"
                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_double" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/layout_imprint" layout="@layout/link_with_text"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_space_double" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/layout_legal_policy" layout="@layout/link_with_text"/>


        </LinearLayout>
    </LinearLayout>

</de.deutschebahn.bahnhoflive.view.DecoratedCard>
